animals/animals-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: animals
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: hare.codeall.com.br
      http:
        paths:
          - path: /
            backend:
              serviceName: hare
              servicePort: http
    - host: bear.codeall.com.br
      http:
        paths:
          - path: /
            backend:
              serviceName: bear
              servicePort: http
    - host: moose.codeall.com.br
      http:
        paths:
          - path: /
            backend:
              serviceName: moose
              servicePort: http
